--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -151,10 +151,41 @@
 		<script	src="/ecs/engine/src/editors/object-editor/editor-manager.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/reset-vectors.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/exit-edit-mode.js"></script>
-
 									<!-- material editor -->
-
+		<script src="/ecs/engine/src/editors/material-editor/undo-redo-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/map-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/key-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/vector-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/color-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/entity-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/text-input-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/value-input-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/vector-input-onchange-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/color-input-onchange-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/value-input-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/vector-input-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/color-input-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/material-editor-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/create-material-entity.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/clone-material-entity.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/remove-material-entity.js"></script>
 									<!-- texture  editor -->
+		<script src="/ecs/engine/src/editors/texture-editor/undo-redo-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/TextureEditor.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/key-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/vector-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/entity-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/text-input-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/value-input-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/vector-input-onchange-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/value-input-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/vector-input-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/texture-viewer-center.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/texture-editor-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/exit-edit-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/create-texture-entity.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/replace-texture-image.js"></script>
 
 
 		<script>
