--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -172,6 +172,7 @@
 		<script src="/ecs/engine/src/editors/material-editor/remove-material-entity.js"></script>
 									<!-- texture  editor -->
 		<script src="/ecs/engine/src/editors/texture-editor/undo-redo-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/key-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/vector-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/entity-droplist-onchange-watcher.js"></script>
