--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -359,9 +359,11 @@
 				})( name );
 			});
 
-			console.log( {"object3DEditor": object3DEditor} ); // debug!
-			console.log( {"materialEditor": materialEditor} ); // debug!
-			console.log( {"textureEditor" : textureEditor}  ); // debug!
+			console.log( "editor:", editor );
+
+		//	debugMode && console.log( {"objectEditor": objectEditor} ); // debug!
+		//	debugMode && console.log( {"materialEditor": materialEditor} ); // debug!
+		//	debugMode && console.log( {"textureEditor" : textureEditor}  ); // debug!
 
 		</script>
 
